<resources>
    <string name="app_name">oppoapp</string>
    <string name="tv_trans">迁移学习</string>
    <string name="tv_fed">联邦学习</string>
    <string name="bn_train">训练</string>
    <string name="bn_test">推理</string>
    <string name="select_class">类别选择</string>
    <string name="add_data">添加数据</string>
    <string name="con_learn">持续学习</string>
    <string name="model_down">模型下载</string>
    <string name="model_up">模型上传</string>
    <string name="class1">A类:</string>
    <string name="class2">B类:</string>
    <string name="class3">C类:</string>
<!--    <string name="class4">类别4:</string>-->
    <string name="request">请求连接</string>
    <array name="classname">
        <item>A类(10)</item>
        <item>B类(10)</item>
        <item>C类(10)</item>
<!--        <item>类别4</item>-->
    </array>
    <array name="modelselect">
        <item>mobilenet</item>
        <item>model2</item>
        <item>model3</item>
    </array>
</resources>