<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity"
    tools:ignore="MissingConstraints"
    >
    <com.example.oppoapp.AutoFitTextureView
        android:id="@+id/texture_view"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_bg_normal"
        android:text="识别结果"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texture_view"
        tools:ignore="NotSibling,UnknownId" />

    <TextView
        android:id="@+id/tx1"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/class1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tx_class1"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/tx1"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:id="@+id/tx2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/class2"
        android:textAlignment="center"
        android:textColor="@color/little_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tx_class2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx1" />

    <TextView
        android:id="@+id/tx_class2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tx2"
        app:layout_constraintTop_toBottomOf="@id/tx_class1" />

    <TextView
        android:id="@+id/tx3"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/class3"
        android:textAlignment="center"
        android:textColor="@color/little_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx2" />

    <TextView
        android:id="@+id/tx_class3"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/tx3"
        app:layout_constraintTop_toBottomOf="@+id/tx_class2" />


</androidx.constraintlayout.widget.ConstraintLayout>