<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fed_activity"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:id="@+id/fed_ll1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="139dp">

        <TextView
            android:id="@+id/tv_trans2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tv_trans"
            android:textColor="#37474F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fed2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tv_fed"
            android:textColor="@drawable/checked_text"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/epoch_tx_2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="361dp"
        android:text="Epoch："
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fed_ll1"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/epoch_2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/epoch_tx_2"
        app:layout_constraintTop_toBottomOf="@+id/fed_ll1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Loss_tx_2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="361dp"
        android:text="Loss："
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epoch_tx_2"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/loss_2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Loss_tx_2"
        app:layout_constraintTop_toBottomOf="@+id/epoch_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Acc_tx_2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="361dp"
        android:text="Accuracy："
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Loss_tx_2"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/Acc_2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Acc_tx_2"
        app:layout_constraintTop_toBottomOf="@+id/loss_2"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/camera_ll_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintTop_toBottomOf="@+id/fed_ll1">

        <com.example.oppoapp.AutoFitTextureView
            android:id="@+id/texture_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/tx_class1"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="A类："
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:translationX="-65dp" />

        <TextView
            android:id="@+id/tx1"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:translationX="5dp" />

        <TextView
            android:id="@+id/tx_class2"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="B类："
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:textColor="@color/little_gray"
            android:textSize="18sp"
            android:translationX="-65dp"
            android:translationY="45dp" />

        <TextView
            android:id="@+id/tx2"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:translationX="5dp"
            android:translationY="45dp" />

        <TextView
            android:id="@+id/tx_class3"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="C类："
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:textColor="@color/little_gray"
            android:textSize="18sp"
            android:translationX="-65dp"
            android:translationY="90dp" />

        <TextView
            android:id="@+id/tx3"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:translationX="5dp"
            android:translationY="90dp" />



    </RelativeLayout>
    <Button
        android:id="@+id/bn_train_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_press_selector"
        android:text="@string/bn_train"
        android:textColor="@color/btn_press_selector"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintEnd_toStartOf="@+id/request"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_press_selector"
        android:text="@string/request"
        android:textColor="@color/btn_press_selector"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintEnd_toStartOf="@+id/bn_test_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bn_train_2" />

    <Button
        android:id="@+id/bn_test_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_press_selector"
        android:text="@string/bn_test"
        android:textColor="@color/btn_press_selector"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/request" />

    <View
        android:id="@+id/guide1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fed_ll1"
        app:layout_constraintVertical_bias="0.601" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@color/orange_tran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide1" />

    <Spinner
        android:id="@+id/select_class_2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:spinnerMode="dropdown"
        android:theme="@style/spinner_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_data_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/add_data_2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg_normal_fed"
        android:text="@string/add_data"
        android:textColor="@color/gray_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/select_class_2"
        app:layout_constraintTop_toBottomOf="@+id/guide1"
        app:layout_constraintVertical_bias="0.004"
        tools:ignore="NotSibling" />


    <Button
        android:id="@+id/model_up_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_bg_normal_fed"
        android:text="@string/model_up"
        android:textColor="@color/gray_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/model_down_2"
        app:layout_constraintTop_toBottomOf="@+id/add_data_2" />

    <Button
        android:id="@+id/model_down_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_bg_normal_fed"
        android:text="@string/model_down"
        android:textColor="@color/gray_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/model_up_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/model_name_2"
        app:layout_constraintTop_toBottomOf="@+id/add_data_2"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/model_name_2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:entries="@array/modelselect"
        android:spinnerMode="dropdown"

        android:theme="@style/spinner_style"
        app:layout_constraintEnd_toStartOf="@+id/model_down_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_data_2" />


</androidx.constraintlayout.widget.ConstraintLayout>